Update Java version, refactor code and improve serialization
The Java version used in Maven and GitHub workflow has been updated to 17. Several areas of the codebase have been refactored for optimization and readability. The `@Serial` annotation has been added to Serializable classes to explicitly indicate the serialized fields.