@@ -1,5 +1,6 @@
 package org.eclipse.pathfinder.internal;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -10,13 +11,14 @@ import jakarta.enterprise.context.ApplicationScoped;
 @ApplicationScoped
 public class GraphDao implements Serializable {
 
+  @Serial
   private static final long serialVersionUID = 1L;
 
   private final Random random = new Random();
 
   public List<String> listLocations() {
     return new ArrayList<>(
-        Arrays.asList(
+        List.of(
             "CNHKG", "AUMEL", "SESTO", "FIHEL", "USCHI", "JNTKO", "DEHAM", "CNSHA", "NLRTM",
             "SEGOT", "CNHGH", "USNYC", "USDAL"));
   }
@@ -24,17 +26,12 @@ public class GraphDao implements Serializable {
   public String getVoyageNumber(String from, String to) {
     int i = random.nextInt(5);
 
-    switch (i) {
-      case 0:
-        return "0100S";
-      case 1:
-        return "0200T";
-      case 2:
-        return "0300A";
-      case 3:
-        return "0301S";
-      default:
-        return "0400S";
-    }
+    return switch (i) {
+      case 0 -> "0100S";
+      case 1 -> "0200T";
+      case 2 -> "0300A";
+      case 3 -> "0301S";
+      default -> "0400S";
+    };
   }
 }
